Restructure project as multi-module